--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,8 @@
 <form th:action="@{/login}" method="post">
     <p>账号：<input type="text" name="username" value="admin"/></p>
     <p>密码：<input type="text" name="password" value="123456"/></p>
+    <div><label> 验证码 : <input type="text" name="captcha" placeholder="验证码"/> </label></div>
+    <div><img th:src="@{/kaptcha.jpg}" title="点击切换" th:onclick="@{/kaptcha.jpg}"></div>
     <P><input type="checkbox" name="rememberMe" />记住我</P>
     <p><input type="submit" value="登录"/></p>
 </form>
